--- a/configs/Kconfig
+++ b/configs/Kconfig
@@ -951,6 +951,13 @@ config ARCH_BOARD_QEMU_I486
 		Port of NuttX to QEMU in i486 mode.  This port will also run on real i486
 		hardwared (Google the Bifferboard).
 
+config ARCH_BOARD_QEMU_INTEL64
+	bool "QEMU x86_64 Mode"
+	depends on ARCH_X86_64 || ARCH_INTEL64
+    select ARCH_IDLE_CUSTOM
+	---help---
+		This port will also run on real intel64 hardware.
+
 config ARCH_BOARD_JAILHOUSE_INTEL64
 	bool "Jailhouse x86-64 cell"
 	depends on ARCH_X86_64 || ARCH_INTEL64
@@ -1724,7 +1731,8 @@ config ARCH_BOARD
 	default "pic32mz-starterkit"       if ARCH_BOARD_PIC32MZ_STARTERKIT
 	default "pizero"                   if ARCH_BOARD_RASPBERRY_PIZERO || ARCH_BOARD_RASPBERRY_PIZEROW
 	default "qemu-i486"                if ARCH_BOARD_QEMU_I486
-	default "jailhouse-intel64"             if ARCH_BOARD_JAILHOUSE_INTEL64
+	default "qemu-intel64"             if ARCH_BOARD_QEMU_INTEL64
+	default "jailhouse-intel64"        if ARCH_BOARD_JAILHOUSE_INTEL64
 	default "sabre-6quad"              if ARCH_BOARD_SABRE_6QUAD
 	default "sama5d2-xult"             if ARCH_BOARD_SAMA5D2_XULT
 	default "sama5d3x-ek"              if ARCH_BOARD_SAMA5D3X_EK
@@ -2087,6 +2095,9 @@ source "configs/pizero/Kconfig"
 endif
 if ARCH_BOARD_QEMU_I486
 source "configs/qemu-i486/Kconfig"
+endif
+if ARCH_BOARD_QEMU_INTEL64
+source "configs/qemu-intel64/Kconfig"
 endif
 if ARCH_BOARD_JAILHOUSE_INTEL64
 source "configs/jailhouse-intel64/Kconfig"
